Comment travis setting

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,14 @@
+# Since Travis does not support LaTex, set language to be generic.
 language: generic
 install:
+    # Update the apt database.
     - sudo apt update
+    # Install the desired linter tool.
     - sudo apt install chktex
 script:
+    # Check for errors and save the output to a file.
     - chktex -q *.tex -o linter_result
+    # Check if the file is empty.
     - test ! -s linter_result
+    # Display the file content.
+    - cat linter_result
